--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 
         const calendarFilesToLoad = [
             "../calendars/sample_hiraeth_events.json",
+            "../calendars/Curse-of-the-Bloodwrite.json"
         ];
 
         let allCalendarsData = {};
